# mgen

./: .gitignore  .travis.yml  LICENSE  README.rst  pre_setup.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy.yml  deploy_test.yml  test-package.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat
mgen/: __init__.py  random_rotation.py  rotation_matrix_3d.py  rotation_matrix_nd.py
mgen/tests/: test_rotations.py
tests/: test_random_rotation.py  test_rotations.py
