[metadata]
name = mgen
author = NOhs
summary = Package to generate rotation matrices
license = BSD
home_page = https://github.com/NOhs/mgen
description_file = README.rst
keywords = matrix, rotations, Euler angles
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages = mgen
